# drawBotProofing

./: .gitignore  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  accentProof.py  alphabetProof.py  charsetProof.py  comparisonProof.py  contextProof.py  figureSpacingProofUFO.py  glyphProofUFO.py  glyphsetProof.py  makeReadme.py  pyproject.toml  requirements.txt  textProof.py  unicodeChartProof.py  verticalMetricsComparisonProof.py  verticalMetricsProof.py  waterfallProof.py
_content/: AC2.txt  AC3.txt  AG2.txt  AL1.txt  AL2.txt  AL3.txt  AL5.txt  ASCII.txt  gold_bug.txt  waterfall_vertical.txt
_content/alphabet proof/: proof_cyr.txt  proof_grk.txt  sample_cyr.txt  spacing_figures.txt
drawbot_proofing/: __init__.py  accentProof.py  alphabetProof.py  charsetProof.py  comparisonProof.py  contextProof.py  figureSpacingProof.py  figureSpacingProofUFO.py  glyphProof.py  glyphProofUFO.py  glyphsetProof.py  overlayFontProof.py  overlayProof.py  referenceProof.py  textProof.py  unicodeChartProof.py  verticalMetricsComparisonProof.py  verticalMetricsProof.py  waterfallProof.py
drawbot_proofing/_content/: ABC.txt  AC1.txt  AG1.txt  AL2.txt  AL4.txt  CHARSET REPORT.md  README.md  en_10k.txt  moby_dick.txt  text_groom.py  waterfall_horizontal.txt
drawbot_proofing/_content/alphabet proof/: proof_ara.txt  proof_figures.txt  proof_lat.txt  proof_tha.txt  sample_ara.txt  sample_figures.txt  sample_grk.txt  sample_lat.txt  sample_tha.txt  spacing_cyr.txt  spacing_figures.txt  spacing_grk.txt  spacing_lat.txt  spacing_tha.txt
drawbot_proofing/proofing_helpers/: __init__.py  drawing.py  files.py  fontSorter.py  fonts.py  formatter.py  globals.py  helpers.py  names.py  stamps.py
proofing_helpers/: charsets.py  drawing.py  files.py  fontSorter.py  fonts.py  helpers.py  names.py
